Updated Facebook token managment

--- a/package.xml.tmpl
+++ b/package.xml.tmpl
@@ -3,7 +3,7 @@
   <name>sfCacophonyPlugin</name>
   <channel>plugins.symfony-project.org</channel>
   <summary>An alternative to sfMelodyPlugin</summary>
-  <description>Implements OAuth with PEAR OAuth extension</description>
+  <description>Implements OAuth with PECL OAuth extension</description>
   <lead>
     <name>Janusz Slota</name>
     <user>janusz.slota</user>
