--- a/package.xml.tmpl
+++ b/package.xml.tmpl
@@ -49,12 +49,61 @@
         <name>OAuth</name>
         <min>1.1.0</min>
         <max>2.0.0</max>
-        <recommended>1.2.2</recommended> 
+        <recommended>1.2.2</recommended>
       </extension>
     </required>
   </dependencies>
   <phprelease></phprelease>
   <changelog>
+    <release>
+      <version>
+        <release>1.0.1</release>
+        <api>1.0</api>
+      </version>
+      <stability>
+        <release>stable</release>
+        <api>stable</api>
+      </stability>
+      <date>2011-10-12</date>
+      <notes>Updated README file:
+      - check out the Cacophony app on github https://github.com/nixilla/Cacophony</notes>
+    </release>
+    <release>
+      <version>
+        <release>1.0.0</release>
+        <api>1.0</api>
+      </version>
+      <stability>
+        <release>stable</release>
+        <api>stable</api>
+      </stability>
+      <date>2011-10-12</date>
+      <notes>First stable release</notes>
+    </release>
+    <release>
+      <version>
+        <release>0.3.0</release>
+        <api>1.0</api>
+      </version>
+      <stability>
+        <release>beta</release>
+        <api>beta</api>
+      </stability>
+      <date>2011-10-12</date>
+      <notes>added Facebook call method </notes>
+    </release>
+    <release>
+      <version>
+        <release>0.2.0</release>
+        <api>1.0</api>
+      </version>
+      <stability>
+        <release>beta</release>
+        <api>beta</api>
+      </stability>
+      <date>2011-10-12</date>
+      <notes>Added call method for Twitter</notes>
+    </release>
     <release>
      <version>
       <release>0.1.0</release>
